Fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,6 @@ body {
     align-items: center;
 }
 
-/* h1 {
-    text-align: center;
-} */
-
 .grid {
     width: 500px;
     height: 500px;
@@ -38,8 +34,3 @@ body {
 .hov {
     background-color:chartreuse;
 }
-
-/* button {
-    display: flex;
-    align-self: center;
-} */
